# stellar-ai-demo

./: CONTACTS_README.md  README.md  env.ts  next.config.ts  package-lock.json  package.json
app/: assistant.tsx  layout.tsx
app/api/chat/: route.ts
components/: app-sidebar.tsx
components/assistant-ui/: thread.tsx
contracts/: CLAUDE.md  Cargo.toml  build.sh
contracts/contacts/: Cargo.toml
contracts/contacts/src/: lib.rs  test.rs
src/: env.ts
src/mastra/: index.ts
src/mastra/agents/: stellar-agent.ts  system-prompt.ts
src/mastra/storage/: pg.ts
src/mastra/workflows/: stellar-workflow.ts
