[workspace]
resolver = "2"

members = ["coffe_sponsor", "stellar_contacts"]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }
smart-wallet = { git = "https://github.com/kalepail/passkey-kit", branch = "next" }
smart-wallet-interface = { git = "https://github.com/kalepail/passkey-kit", branch = "next" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true 